--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-conference-app",
-  "app_id": "",
+  "name": "hgn-app",
+  "app_id": "hgn.hgn",
   "typescript": true,
   "v2": true
 }
