--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
+    "socket.io-client": "^1.7.3",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
-    "typescript": "2.0.9"
+    "typescript": "^2.1.5"
   }
 }
