--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionic-angular": "2.0.0-rc.5-201701112208",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
+    "js-yaml": "^3.8.1",
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.7.3",
     "sw-toolbox": "3.4.0",
