--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.7.3",
     "sw-toolbox": "3.4.0",
+    "webrtc-adapter": "^3.2.0",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
